added replace operation
